# blacklight_api

./: .gitignore  docker-compose.yml  entrypoint.sh  generate_chat_prompt.sh  manage.py  new-kubernetes-knowledge.md  prompt.txt  pyproject.toml  requirements.txt
analysis/: admin.py  models.py  urls.py  views.py
analysis/migrations/: 0001_initial.py
analysis/tests/: test_analysis_model.py  test_analysis_views.py
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_blacklightneuralnetworkrun_delete_blacklightrun.py  0003_datasets_analysis.py
api/urls/: user_urls.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
datasets/: admin.py  models.py  serializers.py  urls.py  views.py
datasets/migrations/: 0001_initial.py  0002_alter_dataset_user.py
datasets/tests/: test_dataset_model.py  test_dataset_serializer.py  test_dataset_views.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Background.js  Feature.js  Footer.js  Header.js
frontend/src/containers/: WhatIsBlacklight.js
frontend/src/screens/: HomeScreen.js
frontend/src/tests/: HomeScreen.test.js
k8s/: kustomization.yaml
k8s/base/celery/: deployment.yaml  service.yaml
k8s/base/db/: deployment.yaml  kustomization.yaml  postgres-data-pv.yaml  postgres-data-pvc.yaml  service.yaml
k8s/base/nginx/: deployment.yaml  kustomization.yaml  (+2 more)
nginx/: nginx.conf
users/: serializers.py  urls.py  views.py
(+6 files in other folders)
